# aligned_layer

./: Makefile
batcher/aligned-batcher-lib/src/types/: mod.rs
batcher/aligned-batcher/src/zk_utils/: mod.rs
batcher/aligned-sdk/abi/: AlignedLayerServiceManager.json
batcher/aligned-sdk/src/: sdk.rs
batcher/aligned/src/: main.rs
batcher/aligned/test_files/mina/: mina_protocol_state_query.json
common/: proving_systems.go
contracts/bindings/AlignedLayerServiceManager/: binding.go
contracts/scripts/anvil/state/: alignedlayer-deployed-anvil-state.json
contracts/src/core/: AlignedLayerServiceManager.sol  IAlignedLayerServiceManager.sol
contracts/src/mina/: MinaVerifier.sol
operator/kimchi/: kimchi.go  kimchi_test.go
operator/kimchi/lib/: .gitignore  kimchi.h  libkimchi_verifier.dylib
operator/kimchi/lib/src/: lib.rs
operator/mina/lib/: Cargo.toml
operator/mina/lib/src/: lib.rs
operator/mina/lib/src/openmina_block_verifier/: consensus_state.rs  mod.rs
operator/mina/lib/src/openmina_block_verifier/header/: blockchain_state.rs  mod.rs  protocol_state.rs  protocol_state_query.rs
operator/mina/lib/src/pickles_preproc/: mod.rs  public_input.rs  state_proof.rs  type_aliases.rs  wrap_deferred_values.rs
operator/mina/lib/src/pickles_preproc/state_proof/: messages_for_next_step_proof.rs  messages_for_next_wrap_proof.rs  mod.rs  statement.rs  utils.rs
operator/pkg/: operator.go
