[package]
name = "kimchi-verifier-ffi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mina-ecadd-proof-generator"
path = "src/ec_add_proof_generator/main.rs"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
kimchi = { git = "https://github.com/lambdaclass/proof-systems", branch = "add-verifier-serializations" }
o1-utils = { git = "https://github.com/lambdaclass/proof-systems", branch = "add-verifier-serializations" }
mina-tree = { git = "https://github.com/lambdaclass/openmina.git", branch = "mina_bridge" }
serde = "1.0.197"
serde_json = "1.0.119"
rmp-serde = "1.1.2"
ark-ff = "0.3"

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }
